add swagger for api gateway (#16)
